--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2372,8 +2372,23 @@
     "\n",
     "1. Ask the user to enter a string, and store in `s`.\n",
     "2. Ask the user to enter an integer, and store in `i`.\n",
-    "3. If `i` is too low ("
+    "3. If `i` is too low (< 0) or too high, then tell the user, and don't do anything more.\n",
+    "4. Print the character at that index.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "    Enter a string: hello out there\n",
+    "    Enter an integer: 4\n",
+    "    \n",
+    "    character at index 4 of hello is o"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
