--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2385,10 +2385,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc def ghi\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'abc'\n",
+    "y = 'def'\n",
+    "z = 'ghi'\n",
+    "\n",
+    "# I dislike doing this, but ... many people really like it.\n",
+    "print(x,y,z)  # this prints x, y, and z with a space between them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefghi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x+y+z)   # this first creates a new string from the combination of x, y, and z, then prints it"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = input('Enter a string: ')\n",
+    "i = input('Enter an index: ')"
+   ]
   }
  ],
  "metadata": {
