--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2424,13 +2424,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: hello out there\n",
+      "Enter an index: -5\n",
+      "Too low!\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input('Enter a string: ')\n",
+    "\n",
+    "i = input('Enter an index: ')\n",
+    "i = int(i)\n",
+    "\n",
+    "if i < 0:\n",
+    "    print('Too low!')\n",
+    "elif i >= len(s):\n",
+    "    print('Too high!')\n",
+    "else:\n",
+    "    print(f'Character at index {i} in string \"{s}\" is \"{s[i]}\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s = input('Enter a string: ')\n",
-    "i = input('Enter an index: ')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
