--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2727,7 +2727,25 @@
     "Pig Latin is a \"secret\" children's language. To translate a word into Pig Latin, check the first letter:\n",
     "\n",
     "- If it's a vowel (a, e, i, o, or u) then add `way` to the end of the word\n",
-    "- Otherwose"
+    "- Otherwise, move the first letter to the end, and add `ay`\n",
+    "\n",
+    "I want you to ask the user to enter a word (all lowercase, one word, no punctuation) and print the translation into Pig Latin.\n",
+    "\n",
+    "Examples:\n",
+    "\n",
+    "- `computer` -> `omputercay`\n",
+    "- `porcupine` -> `orcupinepay`\n",
+    "- `papaya` -> `apayapay`\n",
+    "- `apple` -> `appleway`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mutability .. strip"
    ]
   }
  ],
