--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2745,6 +2745,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "word = input('Enter a word: ')\n",
+    "\n",
+    "# is the first letter a vowel?\n",
+    "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] == 'o' or word[0] == 'u':\n",
+    "    print(word + 'way')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# mutability .. strip"
    ]
   }
