--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2741,6 +2741,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: elephant\n",
+      "elephantway\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input('Enter a word: ')\n",
+    "\n",
+    "# is the first letter a vowel?\n",
+    "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] == 'o' or word[0] == 'u':\n",
+    "    print(word + 'way')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2748,7 +2770,22 @@
     "word = input('Enter a word: ')\n",
     "\n",
     "# is the first letter a vowel?\n",
-    "if word[0] == 'a' or word[0] == 'e' or word[0] == 'i' or word[0] == 'o' or word[0] == 'u':\n",
+    "if word[0] == 'a' or 'e' or 'i' or 'o' or 'u':   # this won't work!  it'll think all words start with vowels\n",
+    "    print(word + 'way')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here's an even better way\n",
+    "\n",
+    "word = input('Enter a word: ')\n",
+    "\n",
+    "# is the first letter a vowel?\n",
+    "if word[0] in 'aeiou':\n",
     "    print(word + 'way')\n"
    ]
   },
