--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2776,9 +2776,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: porcupine\n",
+      "orcupinepay\n"
+     ]
+    }
+   ],
    "source": [
     "# here's an even better way\n",
     "\n",
@@ -2786,7 +2795,9 @@
     "\n",
     "# is the first letter a vowel?\n",
     "if word[0] in 'aeiou':\n",
-    "    print(word + 'way')\n"
+    "    print(word + 'way')\n",
+    "else:\n",
+    "    print(word[1:] + word[0] + 'ay')"
    ]
   },
   {
@@ -2796,6 +2807,17 @@
    "outputs": [],
    "source": [
     "# mutability .. strip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modifying strings\n",
+    "\n",
+    "If I define a string `s`, I can retrieve its element at index 0 with\n",
+    "\n",
+    "    s[0]"
    ]
   }
  ],
