--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2896,11 +2896,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Two problems we can solve with methods\n",
+    "\n",
+    "Problem 1: People are bad at entering text data.  They often have whitespace around their actual inputs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:                Reuven      \n",
+      "Hello,                Reuven      !\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "print(f'Hello, {name}!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'               Reuven      '"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:          Reuven     \n",
+      "Hello, Reuven!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the \"strip\" method for strings returns a new string without any whitespace\n",
+    "# at the start or end\n",
+    "\n",
+    "name = input('Enter your name: ')\n",
+    "name = name.strip()\n",
+    "\n",
+    "print(f'Hello, {name}!')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Even shorter:\n",
+    "\n",
+    "name = input('Enter your name: ').strip()\n",
+    "\n",
+    "print(f'Hello, {name}!')"
+   ]
   }
  ],
  "metadata": {
