--- a/Python first steps, day 1 -- 2022-11Nov-21.ipynb
+++ b/Python first steps, day 1 -- 2022-11Nov-21.ipynb
@@ -2962,8 +2962,8 @@
     "# the \"strip\" method for strings returns a new string without any whitespace\n",
     "# at the start or end\n",
     "\n",
-    "name = input('Enter your name: ')\n",
-    "name = name.strip()\n",
+    "name = input('Enter your name: ')   # we get a string from the user, and assign to name\n",
+    "name = name.strip()                 # name.strip() returns a new string, assigned back to name\n",
     "\n",
     "print(f'Hello, {name}!')"
    ]
