--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cf9e7d3b",
+   "id": "fd33288c",
    "metadata": {},
    "source": [
-    "# Agenda, week 2"
+    "# Agenda, week 2: Loops, lists, and tuples\n",
+    "\n",
+    "1. Introduction to\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19faa4b8",
+   "id": "7738c606",
    "metadata": {},
    "outputs": [],
    "source": []
