--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd33288c",
+   "id": "07fd72b2",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
     "\n",
-    "1. Introduction to\n",
-    "\n"
+    "1. Q&A from last time\n",
+    "2. Loops\n",
+    "    - what are loops?\n",
+    "    - `for` loops\n",
+    "    - looping a number of times\n",
+    "    - `while` loops\n",
+    "    - where's the index?\n",
+    "    - control structures in our loops\n",
+    "3. Lists\n",
+    "    - What are they?\n",
+    "    - How are they similar to strings?\n",
+    "    - How are they different from strings?\n",
+    "    - Mutable vs. immuta\n",
+    "4. Tuples\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7738c606",
+   "id": "e59d8d90",
    "metadata": {},
    "outputs": [],
    "source": []
