--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "07fd72b2",
+   "id": "f880583e",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -19,17 +19,28 @@
     "    - What are they?\n",
     "    - How are they similar to strings?\n",
     "    - How are they different from strings?\n",
-    "    - Mutable vs. immuta\n",
-    "4. Tuples\n"
+    "    - Mutable vs. immutable data structures\n",
+    "4. Strings to lists, and back\n",
+    "    - Using `str.split`\n",
+    "    - Using `str.join`\n",
+    "5. Tuples (just a little!)\n",
+    "    - What are they?\n",
+    "    - Working with tuples?\n",
+    "    - Who cares about tuples?\n",
+    "    - Tuple unpacking"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e59d8d90",
+   "id": "b32e1004",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get input from the user, a number from 1-100\n",
+    "# Using a single condition, give one error message\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
