--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f880583e",
+   "id": "f424af0a",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -32,14 +32,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b32e1004",
+   "execution_count": 4,
+   "id": "4ef50c9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number from 1-100: -5\n",
+      "-5 is not an integer\n"
+     ]
+    }
+   ],
    "source": [
     "# Get input from the user, a number from 1-100\n",
     "# Using a single condition, give one error message\n",
-    "\n"
+    "\n",
+    "s = input('Enter a number from 1-100: ').strip()\n",
+    "\n",
+    "# I want to make sure:\n",
+    "# - s contains only digits\n",
+    "# - s is between 1 and 100\n",
+    "\n",
+    "if s.isdigit():\n",
+    "    n = int(s)\n",
+    "    if n >= 1 and n <= 100:\n",
+    "        print(f'You gave me a good number, {n}')\n",
+    "    else:\n",
+    "        print(f'Your number is outside of the boundaries')\n",
+    "else:\n",
+    "    print(f'{s} is not an integer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5809b309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how can we squish all of these tests into one?"
    ]
   }
  ],
