--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f424af0a",
+   "id": "48b3a7b8",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ef50c9c",
+   "id": "011a7393",
    "metadata": {},
    "outputs": [
     {
@@ -67,12 +67,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "98ffc306",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number from 1-100: abc\n",
+      "Your input, abc, is bad in some way\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how can we squish all of these tests into one?\n",
+    "\n",
+    "s = input('Enter a number from 1-100: ').strip()\n",
+    "\n",
+    "# if s.isdigit() is True, then (and only then) we go onto the 2nd and 3rd tests\n",
+    "# if s.isdigit() is False, then we don't run int(s) at all, and avoid that trouble\n",
+    "\n",
+    "if s.isdigit() and int(s) >= 1 and int(s) <= 100:\n",
+    "    print(f'Your input, {s}, is good!')\n",
+    "else:\n",
+    "    print(f'Your input, {s}, is bad in some way')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5809b309",
+   "id": "5c897620",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# how can we squish all of these tests into one?"
+    "prin"
    ]
   }
  ],
