--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db6d944c",
+   "id": "bc7fa8a2",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6b4c5784",
+   "id": "e5161361",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "89e230ad",
+   "id": "6c57c426",
    "metadata": {},
    "outputs": [
     {
@@ -96,12 +96,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "268bab79",
+   "execution_count": 13,
+   "id": "247ea133",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://Regexp"
+    "# my free, e-mail course teaching regular expressions\n",
+    "# https://RegexpCrashCourse.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3601d119",
+   "metadata": {},
+   "source": [
+    "# Loops\n",
+    "\n",
+    "One of the most important ideas in programming is \"DRY,\" short for \"don't repeat yourself.\"  (I learned this from the Pragmatic Programmer book.)\n",
+    "\n",
+    "The idea is that if you have identical code that repeats itself -- several lines in a row, or several places in the same program , this is a problem:\n",
+    "\n",
+    "- You're writing too much code!\n",
+    "- You'll need to test and debug that code in several places\n",
+    "- If/when you need to fix that code, you'll need to do so in several places\n",
+    "- It's harder to explain the code to someone else"
    ]
   }
  ],
