--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc7fa8a2",
+   "id": "c96c2184",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e5161361",
+   "id": "c0057d66",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c57c426",
+   "id": "c52ac060",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "247ea133",
+   "id": "bf2d26ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3601d119",
+   "id": "297982c1",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -121,6 +121,58 @@
     "- If/when you need to fix that code, you'll need to do so in several places\n",
     "- It's harder to explain the code to someone else"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6dfe2407",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keeping that in mind, let's assume that I have a string, and I want to print each character in it\n",
+    "\n",
+    "s = 'abcd'\n",
+    "\n",
+    "print(s[0])\n",
+    "print(s[1])\n",
+    "print(s[2])\n",
+    "print(s[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba6ba424",
+   "metadata": {},
+   "source": [
+    "There are some problems with the above code:\n",
+    "\n",
+    "- It violates the DRY rule. (I've heard this called WET -- \"write everything twice\"\n",
+    "- What if the string is of a different length? We have no flexibility here\n",
+    "\n",
+    "We can solve both of these problems with a loop.  Python provides us with two (and only two!) types of loops:\n",
+    "\n",
+    "- `for` loops -- used more often, and allow us to go through each element of a sequence\n",
+    "- `while` loops -- we'll get to these later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66e2b8da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
