--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c96c2184",
+   "id": "f0ff563e",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0057d66",
+   "id": "9b5e9a5a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c52ac060",
+   "id": "654d6564",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bf2d26ec",
+   "id": "2fa33825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "297982c1",
+   "id": "9ba382d3",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6dfe2407",
+   "id": "615e6ec4",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba6ba424",
+   "id": "36442b4e",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -168,11 +168,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66e2b8da",
+   "execution_count": 15,
+   "id": "7145f6b5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a for loop that prints the characters in our string\n",
+    "\n",
+    "s = 'abcd'\n",
+    "\n",
+    "for one_character in s:\n",
+    "    print(one_character)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f094a936",
+   "metadata": {},
+   "source": [
+    "How does our `for` loop work?\n",
+    "\n",
+    "1. The word `for` is at the start of the line, followed by:\n",
+    "    - a variable name \n",
+    "    - the word `in`\n",
+    "    - an object, what we'll be looping over\n",
+    "    - a `:` indicating the end of the line\n",
+    "2. An indented block.  It can be as long or as short as you want, so long as it's indented\n",
+    "    - You can have any code you want inside of that block -- `if`, `print`, `len`, `input`, or even another `for` loop.\n",
+    "    - When the indented block ends, the \"body\" of the loop ends, as well.\n",
+    "    \n",
+    "What's happening?\n",
+    "\n",
+    "- The `for` loop turns to `s`, the object, and asks it: Are y"
+   ]
   }
  ],
  "metadata": {
