--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0ff563e",
+   "id": "37e3ba65",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9b5e9a5a",
+   "id": "f88f7d37",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "654d6564",
+   "id": "cd8c8797",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2fa33825",
+   "id": "3ab5f196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba382d3",
+   "id": "acec27b4",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "615e6ec4",
+   "id": "9c6c48b6",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36442b4e",
+   "id": "aa604ca7",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7145f6b5",
+   "id": "ab5941f9",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f094a936",
+   "id": "bdb104cd",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -210,8 +210,26 @@
     "    \n",
     "What's happening?\n",
     "\n",
-    "- The `for` loop turns to `s`, the object, and asks it: Are y"
+    "1. The `for` loop turns to `s`, the object, and asks it: Are you iterable? Can I run a loop on you?\n",
+    "    - If the answer is \"no,\" we get an exception.\n",
+    "2. If the object is iterable, then the `for` loop says: Give me your next value.\n",
+    "    - If there are no more values, then the object says so, and the loop ends.\n",
+    "3. If there is a value, then it is assigned to `one_character`, our variable\n",
+    "4. The loop body executes\n",
+    "5. We return to step 2, asking for the next value.\n",
+    "\n",
+    "From this, we learn at least two things:\n",
+    "\n",
+    "1. The name of the variable has **no effect** on what we get with each iteration."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "995e2d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
