--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37e3ba65",
+   "id": "4b130a3a",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f88f7d37",
+   "id": "6c50fb62",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cd8c8797",
+   "id": "4503bb3f",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3ab5f196",
+   "id": "78b55880",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acec27b4",
+   "id": "6273adec",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9c6c48b6",
+   "id": "84727095",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa604ca7",
+   "id": "742d0205",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ab5941f9",
+   "id": "8a01e000",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb104cd",
+   "id": "bfca8b54",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -220,16 +220,19 @@
     "\n",
     "From this, we learn at least two things:\n",
     "\n",
-    "1. The name of the variable has **no effect** on what we get with each iteration."
+    "1. The name of the variable has **no effect** on what we get with each iteration. You can call your variable whatever you want; the name is useful to developers, and Python couldn't care less.\n",
+    "2. In Python, what we get with each iteration depends 100% on the object we're iterating over. The `for` loop doesn't control the number or type of values we get."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "995e2d3c",
+   "cell_type": "markdown",
+   "id": "47c33df2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Vowels, digits, and others\n",
+    "\n",
+    "1. Define three variables"
+   ]
   }
  ],
  "metadata": {
