--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b130a3a",
+   "id": "2a73fdc4",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6c50fb62",
+   "id": "90ea274a",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4503bb3f",
+   "id": "3f346a63",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "78b55880",
+   "id": "e5d4561e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6273adec",
+   "id": "6fd2202f",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "84727095",
+   "id": "387d9da2",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "742d0205",
+   "id": "d03d84a0",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8a01e000",
+   "id": "181a8bda",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfca8b54",
+   "id": "80986092",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,13 +226,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c33df2",
+   "id": "7104948a",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
     "\n",
-    "1. Define three variables"
+    "1. Define three variables -- `vowels`, `digits`, and `others`, and all three should be set to the integer 0.\n",
+    "2. Ask the user to enter a string, and assign it to `s`.\n",
+    "3. Go through each character in `s`:\n",
+    "    - If it's a vowel (aeiou), then add 1 to `vowels`\n",
+    "    - If it's a digit (0-9), then add 1 to `digits`\n",
+    "    - If it's neither, then add 1 to `others`\n",
+    "4. After the loop runs, print the values of each of our counter variables.\n",
+    "\n",
+    "Hints/reminders:\n",
+    "\n",
+    "1. We can check if a string only contains digits with the `isdigit()` method\n",
+    "2. We can check if a one-character string is a vowel with `in` and the string `'aeiou'`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acfca49f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
