--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2a73fdc4",
+   "id": "f5d604c4",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "90ea274a",
+   "id": "af8b1fbe",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3f346a63",
+   "id": "38176479",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e5d4561e",
+   "id": "74edafa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fd2202f",
+   "id": "dcd0698b",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "387d9da2",
+   "id": "73bfeab8",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d03d84a0",
+   "id": "2d76bf58",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "181a8bda",
+   "id": "00552d89",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80986092",
+   "id": "a26f7979",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7104948a",
+   "id": "6e169ff5",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,10 +248,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acfca49f",
+   "id": "d0c922be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vowels = 0\n",
+    "digits = 0\n",
+    "others = 0\n",
+    "\n",
+    "s = input('Enter a string: ').strip()\n",
+    "\n",
+    "for one_character in s:\n",
+    "    if one_character.isdigit():   # remember that one_character is a string! A string of length 1\n",
+    "        digits += 1\n",
+    "    elif one_character in 'aeiou':\n",
+    "        vowels += 1\n",
+    "    el"
+   ]
   }
  ],
  "metadata": {
